# Intelligent-Network-Traffic-and-Anomaly-Detection

./: FEATURE_ENGINEERING_DOCUMENTATION.md  MODELING_DOCUMENTATION.md  README.md  save_scaler.py
dashboard/: app.py  receiver.py  store.py
data/: data.txt
models/: congestion_inference.py  (+1 more)
notebooks/: pyproject.toml
notebooks/congestion/: 01_baseline_model.ipynb  02_lstm_model.ipynb  03_ensemble.ipynb  Congestion-Feature-Engineering-and-Model-Training.ipynb  README.md  TRAINING_PIPELINE.md  congestion_full_notebook_final.ipynb  congestion_vf_forecasting_notebook.ipynb  export_xgboost_pt.py  feature_list.csv  train_and_export.py
notebooks/congestion/models/: baseline_lgb_results.pkl  congestion_inference.py  lstm_best.pt
notebooks/port-scanning/: 01_modeling_xgb.ipynb  02_bilstm_model.ipynb  03_per_node_eval.ipynb  DEEP_LEARNING_PIPELINE.md  LSTM-Training.ipynb  README.md  STEPS_4-7_SUMMARY.md  lstm_scaler.pkl  pyproject.toml  results-report.txt
notebooks/port-scanning/models/: bilstm_best.pt  bilstm_results.pkl  bilstm_scaler.pkl  per_node_f1_comparison.csv  portscan_per_node_results.pkl  portscan_xgb_results.pkl
notebooks/port-scanning/results/: window_sweep_results.csv
notebooks/port-scanning/results/models/: best_lstm.pt  best_lstm_s12.pt  best_lstm_s16.pt  best_lstm_s24.pt  best_lstm_s32.pt  best_lstm_s4.pt  best_lstm_s8.pt
notebooks/port-scanning/results/processed_data/: best_lstm.pt  best_lstm_ablation.pt  metadata.json  y_test.npy  y_train.npy  y_val.npy
notebooks/port-scanning/scripts/: ablation.py  diagnostics.py  preprocess.py  train_lstm.py
(+46 files in other folders)
