[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"pandas>=3.0.3",
	"numpy>=2.4.6",
	"matplotlib>=3.7",
	"scikit-learn>=1.3",
	"imbalanced-learn>=0.14.1",
	"ipykernel>=7.2.0",
	"seaborn>=0.13.2",
	"torch>=2.12.0",
	"xgboost>=3.2.0",
	"nbconvert>=7.17.1",
	"tensorflow>=2.21.0",
]
