[project]
name = "port-scanning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.2.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "xgboost>=3.2.0",
]
